# libdbf

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  libdbf.pc.in  libdbf.spec.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile.am  Makefile.in  libdbf.sgml
include/: Makefile.am  Makefile.in
include/libdbf/: libdbf.h
po/: POTFILES.in  de.po
src/: Makefile.am  Makefile.in  dbf.c  dbf.h  dbf_endian.c  dbf_endian.h  endian.c  endian.h
