dnl Process this file with autoconf to produce a configure script.
AC_INIT(libdbf, 0.0.1)
AC_CONFIG_SRCDIR(src/dbf.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)
AC_PROG_INTLTOOL

AC_CANONICAL_HOST

LIBDBF_MAJOR_VERSION=0
LIBDBF_MINOR_VERSION=0
LIBDBF_MICRO_VERSION=1
LIBDBF_VERSION=$LIBDBF_MAJOR_VERSION.$LIBDBF_MINOR_VERSION.$LIBDBF_MICRO_VERSION
LIBDBF_VERSION_INFO=`expr $LIBDBF_MAJOR_VERSION + $LIBDBF_MINOR_VERSION`:$LIBDBF_MICRO_VERSION:$LIBDBF_MINOR_VERSION

AC_SUBST(LIBDBF_MAJOR_VERSION)
AC_SUBST(LIBDBF_MINOR_VERSION)
AC_SUBST(LIBDBF_MICRO_VERSION)
AC_SUBST(LIBDBF_VERSION)
AC_SUBST(LIBDBF_VERSION_INFO)

VERSION=${LIBDBF_VERSION}

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_CPP
AC_PATH_PROG(RM, rm, /bin/rm)
AC_PATH_PROG(MV, mv, /bin/mv)
AC_PATH_PROG(TAR, tar, /bin/tar)

dnl Add the languages which your application supports here.
ALL_LINGUAS="de"
AC_SUBST(ALL_LINGUAS, "de")
AM_GNU_GETTEXT_VERSION(0.14.1)
GETTEXT_PACKAGE=libdbf
AC_SUBST(GETTEXT_PACKAGE, libdbf)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

AC_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h ctype.h dirent.h errno.h malloc.h)
AC_CHECK_HEADERS(stdarg.h sys/stat.h sys/types.h time.h)
AC_CHECK_HEADERS(ieeefp.h nan.h math.h fp_class.h float.h)
AC_CHECK_HEADERS(stdlib.h sys/socket.h netinet/in.h arpa/inet.h)
AC_CHECK_HEADERS(netdb.h sys/time.h sys/select.h sys/mman.h)

dnl Checks for library functions.
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(strdup strndup strerror snprintf)
AC_CHECK_FUNCS(finite isnand fp_class class fpclass)
AC_CHECK_FUNCS(strftime localtime)

dnl Checks for inet libraries:
AC_CHECK_FUNC(gethostent, , AC_CHECK_LIB(nsl, gethostent))
AC_CHECK_FUNC(setsockopt, , AC_CHECK_LIB(socket, setsockopt))
AC_CHECK_FUNC(connect, , AC_CHECK_LIB(inet, connect))

dnl Determine what socket length (socklen_t) data type is
AC_MSG_CHECKING([for type of socket length (socklen_t)])

dnl Checks for isnan in libm if not in libc
dnl AC_CHECK_FUNC(isnan, , AC_CHECK_LIB(m, isnan,
dnl   [M_LIBS="-lm"; AC_DEFINE(HAVE_ISNAN)]))

dnl AC_CHECK_FUNC(isinf, , AC_CHECK_LIB(m, isinf,
dnl   [M_LIBS="-lm"; AC_DEFINE(HAVE_ISINF)]))

AC_CHECK_PROG(DOC_TO_MAN, docbook-to-man, docbook-to-man)
if test ! "$DOC_TO_MAN" ; then
  DOCDIR=""
  AC_MSG_RESULT([docbook-to-man could not be found. I will not build man pages!]) 
else
  DOCDIR=doc
fi

dnl
dnl Extra flags
dnl
DBF_CFLAGS=""

AC_ARG_WITH(debug, [  --with-debug            Add the debugging module (on)])
if test "$with_debug" = "no" ; then
    echo Disabling DEBUG support
    WITH_DEBUG=0
    DEBUG_OBJ=
else    
    WITH_DEBUG=1
    DEBUG_OBJ=debugPS.o
fi

AC_SUBST(WITH_DEBUG)

AC_SUBST(CFLAGS)
AC_SUBST(DBF_CFLAGS)

AC_SUBST(DOCDIR)
AC_SUBST(DOC_TO_MAN)

AC_OUTPUT([
Makefile
libdbf.spec
libdbf.pc
doc/Makefile
include/Makefile
src/Makefile
po/Makefile.in
])

echo
echo "Configuration:"
echo "  Prefix:     $prefix"
echo

